a lot of stuff (oops)

--- a/examples/habit_tracker_start.ipynb
+++ b/examples/habit_tracker_start.ipynb
@@ -2,15 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finish\n"
+     ]
+    }
+   ],
    "source": [
     "from todoist_habit_tracker.todoist_connection import TodoistConnection\n",
     "config_file = '/home/rutger/.todoist.txt'\n",
-    "todoist = TodoistConnection.from_config_file(config_file)"
+    "todoist = TodoistConnection.from_config_file(config_file)\n",
+    "print('finish')"
    ]
   },
   {
