--- a/examples/test_subtasks.ipynb
+++ b/examples/test_subtasks.ipynb
@@ -36,24 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n",
-      "[]\n"
-     ]
-    }
-   ],
+   "execution_count": 4,
+   "outputs": [],
    "source": [
     "PROJECT_NAME = 'habit_tracker_test'\n",
     "LABEL = 'habit_automatic'\n",
     "todoist = init_todoist()\n",
     "label_id = todoist.get_label_by_name(LABEL)['id']\n",
     "project_id = todoist.get_project_by_name(PROJECT_NAME)['id']\n",
-    "habits = todoist.filter_tasks(lambda task: (label_id in task['labels']) and (project_id == task['project_id']))\n",
+    "# habits = todoist.filter_tasks(lambda task: (label_id in task['labels']) and (project_id == task['project_id']))\n",
+    "habits = todoist.filter_tasks(lambda task: label_id in task['labels'])\n",
     "habit_objects = [Habit(habit, todoist, label_id) for habit in habits]\n",
     "for habit in habit_objects:\n",
     "    habit.determine_action()\n",
@@ -68,9 +60,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "outputs": [],
-   "source": [],
+   "source": [
+    "todoist._reset()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "for task in todoist.tasks:\n",
+    "    try:\n",
+    "        task['parent_id']\n",
+    "    except KeyError:\n",
+    "        print(task)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
