update jupyter notebook

--- a/examples/completed_tasks.ipynb
+++ b/examples/completed_tasks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "from todoist_habit_tracker.todoist_connection import TodoistConnection\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -55,7 +55,7 @@
       "eat fruit 1 [daily]\n",
       "eat fruit 2 [daily]\n",
       "check news [daily]\n",
-      "{'registration mode': True, 'mail inbox check': True, 'daily review': True, 'stretching 1': True, 'apply ointment evening': True, 'apply ointment morning': True, 'meditate': False, 'update crm': True, 'stretching 2': False, 'stretchen 3': True, 'empty desk inbox daily': True, 'shave': True, 'eat fruit 1': True, 'eat fruit 2': True, 'check news': True}\n"
+      "{'registration mode': True, 'mail inbox check': False, 'daily review': True, 'stretching 1': True, 'apply ointment evening': True, 'apply ointment morning': True, 'meditate': False, 'update crm': True, 'stretching 2': True, 'stretchen 3': True, 'empty desk inbox daily': True, 'shave': True, 'eat fruit 1': True, 'eat fruit 2': True, 'check news': True}\n"
      ]
     }
    ],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def append_data(succes_dict):\n",
@@ -283,12 +283,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "year=2021\n",
     "month=1\n",
-    "comp_task = [todoist.get_completed_tasks(year=year, month=month, day=day)['items'] for day in range(1, 27)]"
+    "comp_task = [todoist.get_completed_tasks(year=year, month=month, day=day)['items'] for day in range(1, 29)]"
    ],
    "metadata": {
     "collapsed": false,
@@ -303,7 +303,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[{'completed_date': '2021-01-26T20:45:07Z',\n  'content': 'daily review @habit @evening @computer',\n  'id': 4228041349,\n  'meta_data': None,\n  'project_id': 2245640837,\n  'task_id': 4523976854,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T20:45:04Z',\n  'content': 'update exist',\n  'id': 4228041243,\n  'meta_data': None,\n  'project_id': 2245640837,\n  'task_id': 4523976897,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T20:38:27Z',\n  'content': 'plan task for next day',\n  'id': 4228026861,\n  'meta_data': None,\n  'project_id': 2245640837,\n  'task_id': 4523976893,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T20:38:25Z',\n  'content': 'read week focus',\n  'id': 4228026786,\n  'meta_data': None,\n  'project_id': 2245640837,\n  'task_id': 4523976877,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T20:36:14Z',\n  'content': 'eat fruit 2 @habit @5_minutes',\n  'id': 4228021974,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4523977030,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T20:35:41Z',\n  'content': 'look at already planned stuff',\n  'id': 4228020717,\n  'meta_data': None,\n  'project_id': 2245640837,\n  'task_id': 4523976863,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T20:35:05Z',\n  'content': 'empty Todoist inbox',\n  'id': 4228019503,\n  'meta_data': None,\n  'project_id': 2245640837,\n  'task_id': 4523976857,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T20:35:00Z',\n  'content': 'update crm @habit @evening',\n  'id': 4228019357,\n  'meta_data': None,\n  'project_id': 2245640786,\n  'task_id': 4523976945,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T20:33:34Z',\n  'content': 'stretchen 3 @habit',\n  'id': 4228016282,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4523976976,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T20:33:31Z',\n  'content': 'reflect on irritating situation',\n  'id': 4228016154,\n  'meta_data': None,\n  'project_id': 2254060408,\n  'task_id': 4517005705,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T20:28:59Z',\n  'content': 'go trough other old exams and answers @upcoming_week @3_pomodoro',\n  'id': 4228006196,\n  'meta_data': None,\n  'project_id': 2245640078,\n  'task_id': 4518087925,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T19:48:04Z',\n  'content': 'Velvet met huis @appointment',\n  'id': 4227917423,\n  'meta_data': None,\n  'project_id': 2245640786,\n  'task_id': 4525550687,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T18:22:40Z',\n  'content': 'empty desk inbox daily @habit',\n  'id': 4227725519,\n  'meta_data': None,\n  'project_id': 2245640837,\n  'task_id': 4523977000,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T18:22:40Z',\n  'content': 'registration mode @habit',\n  'id': 4227725514,\n  'meta_data': None,\n  'project_id': 2245641603,\n  'task_id': 4523976838,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T17:19:30Z',\n  'content': 'look into old True/False questions',\n  'id': 4227572675,\n  'meta_data': None,\n  'project_id': 2245640078,\n  'task_id': 4525557382,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T17:13:59Z',\n  'content': 'apply ointment evening @habit @evening',\n  'id': 4227558794,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4523976913,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T16:54:57Z',\n  'content': 'resistance run @upcoming_week',\n  'id': 4227508559,\n  'meta_data': None,\n  'project_id': 2254060310,\n  'task_id': 4518124605,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T16:54:57Z',\n  'content': 'home workout 2 @upcoming_week',\n  'id': 4227508551,\n  'meta_data': None,\n  'project_id': 2245640412,\n  'task_id': 4518123281,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T16:54:56Z',\n  'content': 'workout 1 @upcoming_week',\n  'id': 4227508541,\n  'meta_data': None,\n  'project_id': 2245640412,\n  'task_id': 4518123558,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T16:52:30Z',\n  'content': 'eat fruit 1 @habit @5_minutes',\n  'id': 4227501757,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4523977026,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T16:49:30Z',\n  'content': 'discuss practice exam @upcoming_week @appointment',\n  'id': 4227493936,\n  'meta_data': None,\n  'project_id': 2249598916,\n  'task_id': 4522568275,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T16:49:14Z',\n  'content': 'make exam check list',\n  'id': 4227493161,\n  'meta_data': None,\n  'project_id': 2245640078,\n  'task_id': 4522932132,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T15:49:36Z',\n  'content': 'running with Hidde @appointment',\n  'id': 4227334247,\n  'meta_data': None,\n  'project_id': 2245640786,\n  'task_id': 4518083888,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T12:51:18Z',\n  'content': 'meditate @habit',\n  'id': 4226880281,\n  'meta_data': None,\n  'project_id': 2245641603,\n  'task_id': 4523976933,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T12:39:56Z',\n  'content': 'stretching 2 @habit',\n  'id': 4226856170,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4523976964,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T12:37:33Z',\n  'content': 'trainings checklist @5_minutes',\n  'id': 4226851067,\n  'meta_data': None,\n  'project_id': 2245639901,\n  'task_id': 4522675072,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T11:34:46Z',\n  'content': 'go trough old exercises brownian Motion @upcoming_week @2_pomodoro',\n  'id': 4226727993,\n  'meta_data': None,\n  'project_id': 2245640078,\n  'task_id': 4518087453,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T11:26:37Z',\n  'content': 'check news @habit',\n  'id': 4226712578,\n  'meta_data': None,\n  'project_id': 2245642080,\n  'task_id': 4523977040,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T11:20:28Z',\n  'content': 'make practice exam 2 @upcoming_week @4_pomodoro',\n  'id': 4226700708,\n  'meta_data': None,\n  'project_id': 2245640078,\n  'task_id': 4518086698,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T09:54:30Z',\n  'content': 'shave @habit @5_minutes',\n  'id': 4226542123,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4523977009,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T09:54:30Z',\n  'content': 'mouth wash @habit @5_minutes',\n  'id': 4226542118,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4364775232,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T08:56:40Z',\n  'content': 'mail inbox check @habit @5_minutes @computer',\n  'id': 4226435999,\n  'meta_data': None,\n  'project_id': 2245642080,\n  'task_id': 4523976846,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T07:44:49Z',\n  'content': 'stretching 1 @habit',\n  'id': 4226311404,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4523976906,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T07:44:49Z',\n  'content': 'apply ointment morning @habit @morning',\n  'id': 4226311401,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4523976922,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T07:02:55Z',\n  'content': 'Drink water @habit @morning',\n  'id': 4226248551,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4377238168,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T07:02:55Z',\n  'content': 'morning workout @habit @morning',\n  'id': 4226248547,\n  'meta_data': None,\n  'project_id': 2245640412,\n  'task_id': 4264615262,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T07:02:49Z',\n  'content': 'stretchen 3 @habit',\n  'id': 4226248420,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4520496210,\n  'user_id': 15358147},\n {'completed_date': '2021-01-26T07:02:49Z',\n  'content': 'apply ointment evening @habit @evening',\n  'id': 4226248419,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4520496136,\n  'user_id': 15358147}]"
+      "text/plain": "[{'completed_date': '2021-01-28T23:03:54Z',\n  'content': 'stretchen 3 @habit',\n  'id': 4233498055,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4529951661,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T23:03:54Z',\n  'content': 'apply ointment evening @habit @evening',\n  'id': 4233498050,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4529951618,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T20:31:26Z',\n  'content': 'daily review @habit @evening @computer',\n  'id': 4233213356,\n  'meta_data': None,\n  'project_id': 2245640837,\n  'task_id': 4529951566,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T20:31:23Z',\n  'content': 'update exist',\n  'id': 4233213269,\n  'meta_data': None,\n  'project_id': 2245640837,\n  'task_id': 4529951592,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T20:18:28Z',\n  'content': 'update crm @habit @evening',\n  'id': 4233186946,\n  'meta_data': None,\n  'project_id': 2245640786,\n  'task_id': 4529951642,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T20:13:24Z',\n  'content': 'plan task for next day',\n  'id': 4233176574,\n  'meta_data': None,\n  'project_id': 2245640837,\n  'task_id': 4529951589,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T20:13:24Z',\n  'content': 'read week focus',\n  'id': 4233176569,\n  'meta_data': None,\n  'project_id': 2245640837,\n  'task_id': 4529951578,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T20:13:24Z',\n  'content': 'look at already planned stuff',\n  'id': 4233176567,\n  'meta_data': None,\n  'project_id': 2245640837,\n  'task_id': 4529951575,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T20:13:24Z',\n  'content': 'empty Todoist inbox',\n  'id': 4233176564,\n  'meta_data': None,\n  'project_id': 2245640837,\n  'task_id': 4529951570,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T19:54:27Z',\n  'content': \"read in 'zwarte zwaan' 2 @upcoming_week\",\n  'id': 4233137967,\n  'meta_data': None,\n  'project_id': 2254060333,\n  'task_id': 4518126792,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T19:51:38Z',\n  'content': 'empty desk inbox daily @habit',\n  'id': 4233132445,\n  'meta_data': None,\n  'project_id': 2245640837,\n  'task_id': 4529951664,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T19:51:02Z',\n  'content': 'night with kern @appointment',\n  'id': 4233131148,\n  'meta_data': None,\n  'project_id': 2245640786,\n  'task_id': 4518084692,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T17:30:57Z',\n  'content': 'reflect on irritating situation',\n  'id': 4232829865,\n  'meta_data': None,\n  'project_id': 2254060408,\n  'task_id': 4517005705,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T17:20:22Z',\n  'content': 'possible enquestioning @appointment',\n  'id': 4232805108,\n  'meta_data': None,\n  'project_id': 2249598916,\n  'task_id': 4528656884,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T17:13:00Z',\n  'content': 'brainstorm 1 @upcoming_week',\n  'id': 4232787524,\n  'meta_data': None,\n  'project_id': 2254060349,\n  'task_id': 4518127790,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T16:22:57Z',\n  'content': 'stretching 2 @habit',\n  'id': 4232662223,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4529951646,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T16:12:18Z',\n  'content': 'exam @appointment',\n  'id': 4232635699,\n  'meta_data': None,\n  'project_id': 2249598916,\n  'task_id': 4528656071,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T15:26:30Z',\n  'content': 'registration mode @habit',\n  'id': 4232516160,\n  'meta_data': None,\n  'project_id': 2245641603,\n  'task_id': 4529951547,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T15:07:07Z',\n  'content': 'eat fruit 2 @habit @5_minutes',\n  'id': 4232467750,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4529951698,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T14:53:13Z',\n  'content': 'home workout 4 @upcoming_week',\n  'id': 4232431930,\n  'meta_data': None,\n  'project_id': 2245640412,\n  'task_id': 4518123371,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T14:53:13Z',\n  'content': 'clean fridge @habit @5_minutes',\n  'id': 4232431929,\n  'meta_data': None,\n  'project_id': 2245641641,\n  'task_id': 4364774699,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T14:42:15Z',\n  'content': 'eat fruit 1 @habit @5_minutes',\n  'id': 4232403624,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4529951678,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T13:50:10Z',\n  'content': 'ask Guido about cycling',\n  'id': 4232275331,\n  'meta_data': None,\n  'project_id': 2170868719,\n  'task_id': 4529532280,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T09:08:01Z',\n  'content': 'join exam preparation call',\n  'id': 4231735489,\n  'meta_data': None,\n  'project_id': 2249598916,\n  'task_id': 4529348262,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T09:00:34Z',\n  'content': 'make overview of classifiers @upcoming_week @1_pomodoro',\n  'id': 4231722281,\n  'meta_data': None,\n  'project_id': 2249598916,\n  'task_id': 4522585889,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T09:00:31Z',\n  'content': 'go through exercises information @upcoming_week @2_pomodoro',\n  'id': 4231722193,\n  'meta_data': None,\n  'project_id': 2249598916,\n  'task_id': 4522578235,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T08:40:43Z',\n  'content': 'shave @habit @5_minutes',\n  'id': 4231686521,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4529951672,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T08:17:45Z',\n  'content': 'mail inbox check @habit @5_minutes @computer',\n  'id': 4231647494,\n  'meta_data': None,\n  'project_id': 2245642080,\n  'task_id': 4529951558,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T08:12:48Z',\n  'content': 'go trough solutions old exam @upcoming_week @1_pomodoro',\n  'id': 4231639046,\n  'meta_data': None,\n  'project_id': 2249598916,\n  'task_id': 4525530014,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T08:05:12Z',\n  'content': 'check news @habit',\n  'id': 4231626121,\n  'meta_data': None,\n  'project_id': 2245642080,\n  'task_id': 4529951711,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T07:41:06Z',\n  'content': 'morning workout @habit @morning',\n  'id': 4231587353,\n  'meta_data': None,\n  'project_id': 2245640412,\n  'task_id': 4264615262,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T07:41:06Z',\n  'content': 'Drink water @habit @morning',\n  'id': 4231587349,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4377238168,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T07:41:05Z',\n  'content': 'stretching 1 @habit',\n  'id': 4231587342,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4529951604,\n  'user_id': 15358147},\n {'completed_date': '2021-01-28T07:41:05Z',\n  'content': 'apply ointment morning @habit @morning',\n  'id': 4231587334,\n  'meta_data': None,\n  'project_id': 2245640739,\n  'task_id': 4529951623,\n  'user_id': 15358147}]"
      },
      "execution_count": 8,
      "metadata": {},
@@ -322,14 +322,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "import re\n",
     "results = {}\n",
     "for habit in habit_objects:\n",
     "    results[str(habit)]= {}\n",
-    "    for day in range(1, 27):\n",
+    "    for day in range(1, 29):\n",
     "        contents = [re.sub('@.* ', '', c['content']) for c in comp_task[day-1]]\n",
     "        contents = [re.sub('@.*', '', c).strip() for c in contents]\n",
     "        results[str(habit)][datetime(year=2021, month=1, day=day).strftime('%d/%m/%Y')] = habit.content in contents"
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "res = pd.DataFrame(results)"
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "dirname = os.path.abspath(os.path.abspath(''))\n",
