update google drive file with daily scores

--- a/examples/completed_tasks.ipynb
+++ b/examples/completed_tasks.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "def df_to_drive(folder, drive_api, df, title):\n",
@@ -262,7 +262,7 @@
     "    filename = os.path.join(os.path.split(dirname)[0], 'log/{0}'.format(title))\n",
     "    df.to_csv(filename)\n",
     "    f.SetContentFile(filename)\n",
-    "    f.Upload({'convert': True})"
+    "    f.Upload({'convert': False})"
    ],
    "metadata": {
     "collapsed": false,
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
