--- a/examples/completed_tasks.ipynb
+++ b/examples/completed_tasks.ipynb
@@ -50,40 +50,14 @@
     "\n",
     "TEST_PROJECT='habit_tracker_test'\n",
     "project_id = todoist.get_project_by_name(TEST_PROJECT)['id']\n",
-    "# open data file\n",
     "label_id = todoist.get_label_by_name(LABEL)['id']\n",
     "habits = todoist.filter_tasks(lambda task: (label_id in task['labels']) and (project_id != task['project_id']))\n",
-    "habit_objects = [Habit(habit, todoist, label_id, None) for habit in habits]\n",
+    "habit_objects = [Habit(habit, todoist, label_id) for habit in habits]\n",
     "succes = {}\n",
     "for habit in habit_objects:\n",
     "    succes[str(habit)] =  habit.done()\n",
     "\n",
-    "print(succes)\n",
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
-   "source": [
-    "def append_data(succes_dict):\n",
-    "    dirname = os.path.abspath(os.path.abspath(''))\n",
-    "    filename = os.path.join(os.path.split(dirname)[0], 'log/daily_tasks.csv')\n",
-    "    try:\n",
-    "        df = pd.read_csv(filename, index_col=0)\n",
-    "        df = df.append(pd.DataFrame(succes, index=[datetime.today().strftime('%d/%m/%Y')]))\n",
-    "    except FileNotFoundError:\n",
-    "        df = pd.DataFrame(succes, index=[datetime.today().strftime('%d/%m/%Y')])\n",
-    "        df.index.name = 'date'\n",
-    "    df.to_csv(filename)\n",
-    "\n"
+    "print(succes)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -239,9 +213,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "df = pd.read_csv(filename, index_col=0)\n",
-    "# new_columns = df.columns.values\n",
-    "# new_columns[0] = 'Date'"
+    "df = pd.read_csv(filename, index_col=0)"
    ],
    "metadata": {
     "collapsed": false,
