--- a/examples/habit_tracker_start.ipynb
+++ b/examples/habit_tracker_start.ipynb
@@ -18,8 +18,7 @@
    "source": [
     "from todoist_habit_tracker.todoist_connection import TodoistConnection\n",
     "config_file = '/home/rutger/.todoist.txt'\n",
-    "todoist = TodoistConnection.from_config_file(config_file)\n",
-    "print('finish')"
+    "todoist = TodoistConnection.from_config_file(config_file)"
    ]
   },
   {
@@ -35,7 +34,7 @@
     }
    ],
    "source": [
-    "print(len(todoist.uncompleted_tasks))\n"
+    "print(len(todoist.uncompleted_tasks))"
    ],
    "metadata": {
     "collapsed": false,
@@ -49,9 +48,7 @@
    "execution_count": 7,
    "outputs": [],
    "source": [
-    "project_name = 'habit_tracker_test'\n",
-    "\n",
-    "projs = todoist.projects"
+    "project_name = 'habit_tracker_test'"
    ],
    "metadata": {
     "collapsed": false,
@@ -94,43 +91,9 @@
    "execution_count": 15,
    "outputs": [],
    "source": [
-    "tasks = todoist.filter_tasks(lambda item: item['project_id'] == project_id)\n"
+    "tasks = todoist.filter_tasks(lambda item: item['project_id'] == project_id)\n",
+    "tasks"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "[Item({'added_by_uid': 15358147,\n  'assigned_by_uid': None,\n  'checked': 0,\n  'child_order': 1,\n  'collapsed': 0,\n  'content': 'test',\n  'date_added': '2020-12-13T20:01:28Z',\n  'date_completed': None,\n  'day_order': -1,\n  'due': None,\n  'id': 4411237772,\n  'in_history': 0,\n  'is_deleted': 0,\n  'labels': [],\n  'parent_id': None,\n  'priority': 1,\n  'project_id': 2252535675,\n  'responsible_uid': None,\n  'section_id': None,\n  'sync_id': None,\n  'user_id': 15358147})]"
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tasks\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
